add post/update tests, add madia-files/update tests, add to swagger post comments/add endpoint
- add post/update tests,
- add madia-files/update tests,
- add to swagger post comments/add endpoint
