# models/posts.js
@@ -33,9 +33,8 @@ const myPostSchema = Joi.object({
 
 const updateMyPostSchema = Joi.object({
   description: Joi.string(),
-  mediaFiles: Joi.string(),
 })
-  .or("description", "mediaFiles")
+  .or("description")
   .required();
 
 const postSchemas = {
